# kuBig2025

./: .gitignore  CMakeLists.txt  README.md  environment.yml
C_example/: a.out  celsius2fahr  celsius2fahr.c  charNumber  charNumber.c  compare.c  compare2.c  fahr2celsius  fourBits  fourBits2  fourBits2.c  genderRatio.c  limit.c  makefile  oddeven
atmega128_led/: ch10_1_ISP.c  ch10_3_SHT2_UART.c  ch11_1_DCmoto1.c  ch11_2_DCmotor2.c  ch13_ServoMotor.c  ch1_1_led.c  ch1_2_led.c  ch1_3_led.c  ch1_4_led.c  ch1_5_led_switch_lcd.c  ch1_6_rand7segment.c  ch1_7_timer7segment.c  ch1_8_switch7segment.c  ch5_2_ledapp_interrupt.c  ch5_3_7segment_interrupt.c  ch6_1_timer_led1.c  ch6_2_timer_led2.c  ch6_3_timer16bit_led1.c  ch6_4_timer16bit_led2.c  ch6_5_timerCapcher.c  ch6_6_timerCompare.c  ch7_1_PWM_led1.c  ch7_2_PWM_piezo.c  ch7_3_PWM_Switch_doremi.c  ch7_4_PWM.c  ch8_1_uart7segment.c  ch8_2_uart2.c  ch8_3_uart3.c  ch8_4_uart4.c  ch9_1_ADC_LightSensor.c  ch9_2_ADC_LightSensor_LED.c
cBowlingGame/: createDbTable.sql
cpp/: hello.cpp  hello2.cpp  pointer.cpp  print.cpp  reference.cpp
data/: info.txt  students.txt  students_binary.pickle  text.txt
docker_test/: requirement.txt
ds/: generic.c  myStrcpy.c  myStudy.c  study  testArray.c  testArray2.c  variantSizeArray.c  variantSizeArray2.c
ml_dl_python/: 01_jupyter.ipynb  02_fish.ipynb  03_numpy.ipynb  04_numpy2.ipynb  05_data_split.ipynb  06_regression.ipynb  07_linear_reg.ipynb  08_polynomial_reg.ipynb  09_classification.ipynb  10_batch_slope.ipynb  11_decision_tree.ipynb  12_cross_validation.ipynb  13_random_forest.ipynb  14_titanic.ipynb  15_pandas.ipynb  16_kmean.ipynb  17_pca.ipynb
opencv/part4/: 29_affine.cpp  30_perspective.cpp  31_sobel.cpp  32_canny.cpp  33_houghline.cpp  34_houghCircle.cpp  35_color_split.cpp  36_inrange.cpp  37_threshold.cpp  38_morphology.cpp  39_labeling.cpp  40_follow_color_paper.cpp  CMakeLists.txt
orange3/: BTS.ows  HousePrices  corelation.py  covid19.ows
python/: a01.py  a02_keyword.py  a03_variable.py  a04_print.py  a05_type.py  a06_frame.py  a07_locals_vars.py  a08_str_indexing.py  a10_input.py  a11_formatting.py  a12_str_class.py  a13_comparison.py  a14_overriding.py  a15_datetime.py  a16_datetime2.py  a17_list.py  a18_list_method.py  a19_range_enumerate.py  a20_tuple.py  a21_cPython_import.py  a22_dictionary.py  a23_dict_for.py  a24_while.py  a25_time.py  a26_list_comprehension.py  a28_function.py  a29_default_arg.py  (+47 more)
(+431 files in other folders)
