cmake_minimum_required(VERSION 3.10)
project(MainProject)

# 내부 CMakeLists.txt 포함
# add_subdirectory(sqlQuery)
# add_subdirectory(C_example/part1)
# add_subdirectory(C_example/part2)
# add_subdirectory(C_example/part3)
# add_subdirectory(C_example/part4)
# add_subdirectory(ds)
# add_subdirectory(cpp)
# add_subdirectory(stl)
# add_subdirectory(network/ipc)
# add_subdirectory(network/tcp_udp)
# add_subdirectory(network/util)
# add_subdirectory(network/multi_process)
# add_subdirectory(myNetwork/myIpc)
add_subdirectory(opencv/part1)
add_subdirectory(opencv/part2)
add_subdirectory(opencv/part3)
add_subdirectory(opencv/part4)